fix: cookie banner responsive view
fixed bug where text goes off screen on cookie banner

--- a/style.scss
+++ b/style.scss
@@ -98,6 +98,7 @@ body {
     right: 0;
     z-index: 10;
     background-color: $nm-dark;
+    max-height: 109px;
     border-top: 1px solid rgba(255, 255, 255, 0.25);
     outline: 1px solid rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -106,6 +107,11 @@ body {
     p {
         color: white;
         font-size: 0.875rem;
+        @media screen and (max-width: 702px){
+            font-size: 0.5rem;
+            margin: 0;
+            line-height: 1.8;
+        }
         line-height: 1rem;
         margin-top: 10px;
         margin-bottom: 10px;
@@ -826,7 +832,7 @@ header {
     .slick-dots {
         position: absolute;
         display: block;
-        z-index: 100;
+        z-index: 9;
         bottom: 0;
         list-style: none;
         text-align: center;
